--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <h1>OAuth Redirect Capture PoC</h1>
-  <p>This page captures OAuth URL parameters and displays them below.</p>
+  <p>This page captures OAuth URL parameters and displays them below:</p>
   <pre id="output">Loading...</pre>
 
   <script>
